# msw-framework

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  AI_ASSISTANT_GUIDE.md  AI_CONSULTANT_IMPLEMENTATION_REPORT.md  ASSESSMENT.md  AUTOMATION_SUMMARY.md  CHANGELOG.md  COURSE_CHANGELOG.md  Example_Contract.md  FACTORY_CHANGELOG.md  FACTORY_README.md  FAQ.md  Feedback_System.md  First Principles Framework — Core Conceptual Specification (holonic).md  Framework_Roadmap.md  Glossary.md  How_to_fill_contract.md  INDEX.md  LICENSE  Metrics_Framework.md  NAVIGATION_GUIDE.md  PILOT_LAUNCH_GUIDE.md  PLATFORM_COMPARISON.md  PROJECTS.md  Personal Contract v3.2.md  Personal_Contract_v4.0_Template.md  Progress_Dashboard_Template.md  QUICK_START.md  QUICK_START_CLI.md  README.md  REPOSITORY_ANALYSIS.md  SELF_STUDY_GUIDE.md  STRUCTURE.md  System_Career_Materials_06092025.md  Systemic_Career_Framework_v2.md  Troubleshooting.md  Weekly_Retro_Template.md  enrich_all_concepts.py  (+11 more)
.ontology/: README.md
OtherMaterials/: 01_Краткое_описание.md  Intellect.md  ProductiveStateFramework2.md  Provodnik_As_Course_Factory.md  README.md  SelfDevelopment.md  clean_systems_thinking.py  Анализ_соответствия_Проводник_и_Курс.md  Оценка_готовности_для_прохождения_курса.md  Проводник_как_система_создания_курсов.md
audit_reports/: 00_Audience_Success_Criteria.md  00_FPF_Key_Concepts.md  00_FPF_Lens_Checklist.md  00_Phase0_Summary.md  01_Glossary_Audit.md  01_Key_Distinctions_Audit.md  01_Personal_Contract_Audit.md  01_Phase1_Summary.md  01_Practices_Audit.md  02_Course_Architecture.md  02_Navigation_Audit.md  02_Orphan_Files.md  02_Phase2_Summary.md  02_Templates_Coverage_Matrix.md  02_Terminology_Consistency.md  03_Examples_Audit.md  03_Junior_Experience.md  03_Phase3_Summary.md  03_Research_Value.md  03_Senior_Experience.md  04_Factory_Tools_Audit.md  ACTION_PLAN.md  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY_FOR_USER.md  FULL_AUDIT_REPORT.md  README.md  RECOMMENDATIONS_FOR_AUTHOR.md  RECOMMENDATIONS_FOR_PARTICIPANTS.md  RECOMMENDATIONS_FOR_RESEARCHERS.md
book_msw/: README.md  outline.md
case_studies/: Case_01_Analyst_Transition.md  Case_02_Dev_To_Architect.md  Case_03_Lead_Burnout.md  INDEX.md
checklists/: Check_Good_Touch.md  Check_Public_Demo.md  Checklist_Calendar_Slots.md  Checklist_Sprint_Planning.md  Checklist_Weekly_Strategizing.md  Group_Review_Session_Template.md  Mentor_Feedback_Template.md
course_cli/: README.md  __init__.py  main.py  pyproject.toml
course_cli/course_cli/: main.py
docs/: AI_CONTRACT_CONSULTANT_GUIDE.md  README.md
examples/: README.md  persona_1_analyst_contract_v1.md  persona_1_analyst_contract_v2.5.md  persona_1_analyst_contract_v2.md  persona_1_analyst_contract_v4.0.md  persona_2_dev_contract_v1.md  persona_2_dev_contract_v2.md  persona_2_dev_contract_v4.0.md  persona_3_lead_contract_v1.md  persona_3_lead_contract_v2.md  persona_3_lead_contract_v4.0.md  week_01_writing_sample_roles_audit.md
ontology_toolkit/: .cursorrules  .gitignore  AI_GUIDE.md  CHANGELOG.md  QUALITY_PRINCIPLES.md  QUICK_START.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  ROADMAP.md  STEP_01_SUMMARY.md  STEP_02_SUMMARY.md  USER_GUIDE.md  WINDOWS_ENCODING.md  WINDOWS_SETUP.md  __init__.py  add_career_concept_simple.py  pyproject.toml  run_tests.py  test_cli_manual.py  verify_structure.py
ontology_toolkit/.ontology_demo/concepts/: C_1_agentnost.md  C_2_strategirovanie.md  C_3_lichnyy_kontrakt.md
ontology_toolkit/ai/: __init__.py  base_provider.py  client.py  extractor.py  factory.py  filler.py  prompts.py
ontology_toolkit/ai/providers/: __init__.py  anthropic_provider.py  cursor_provider.py  gemini_provider.py  grok_provider.py  openai_provider.py
ontology_toolkit/cli/: __init__.py  main.py
ontology_toolkit/core/: __init__.py  concept.py  ontology.py  schema.py
ontology_toolkit/io/: __init__.py  csv_export.py  markdown.py  xlsx_export.py
ontology_toolkit/mcp/: __init__.py
ontology_toolkit/prompts_templates/: CHANGELOG_template.md  concept_fill.md  context_extract.md  meta_meta_rules.md  ontology_README_template.md  ontology_project_template.yaml  project_context_template.yaml
ontology_toolkit/tests/: __init__.py  test_ai.py  test_basic_flow.py  test_cli.py  test_io.py
personal_contracts/: README.md
practices/: INDEX.md  Practice_01_Writing.md  Practice_02_Strategizing.md  Practice_03_Planning.md  Practice_04_Time_Tracking.md  Practice_05_Environment.md  Practice_06_Reading.md  Practice_07_Speaking.md  Practice_08_Recovery.md
projects/: README.md
scripts/: README.md  check_docs_sync.py  check_encoding.py  export_coda_page.py  fix_changelog_order.py  install_automation.py  pre-commit.sh  update_docs.py
templates/: Personal_Contract_v1.0_Week1_Template.md  Personal_Contract_v2.0_Week2_Template.md  Week_02_Strategy_Hypothesis_Template.md  (+10 more)
(+139 files in other folders)
